# llm-zh-modernbert

./: README.md  pyproject.toml
config/: 2node.json
en-zh-bert-wordpiece-tokenizer/: tokenizer.json  tokenizer_config.json
script/: eval.sh  train.sh  train_main.sh  train_main_extension.sh
src/eval/: __init__.py  alignment_and_uniformity.py  compute_perplexity.py  fill_mask_test.py  make_leaderboard.py  play_retrieval.py  pseudo_perplexity.py  run_glue_no_trainer.py  sentence_sim.py  sim_distribution.py  zeroshot_retrieval.py
src/train/: prepare_dataset.py  prepare_modernbert.py  prepare_tokenizer.py  train.py
